# agent-sessions

./: .clauderules  .gitignore  BACKEND_INTEGRATION.md  DESIGN.md  EXPERT_REVIEWERS.md  FILEID_IMPLEMENTATION_COMPLETE.md  FILEID_MIGRATION_STATUS.md  GIT_DATAFLOW_ANALYSIS.md  GIT_DATAFLOW_CODE_LOCATIONS.txt  GIT_DATAFLOW_QUICK_REFERENCE.txt  IMPLEMENTATION_STATUS.md  MIGRATION_PLAN.md  MULTI_AGENT_VERIFICATION.md  MULTI_STAGE_REVIEW.md  REVIEW_ARCHITECTURE.md  REVIEW_MODE_CHANGES.md  REVIEW_PROMPTS.md  TERMINAL_PERSISTENCE_BUG.txt  bash.exe.stackdump  classification-result.json  components.json  extract-git-handlers.sh  extract_git.py  index.html  modify_main.py  modify_main.sed  modify_main_final.py  modify_main_v2.py  package-lock.json  package.json  pnpm-lock.yaml  test-server.js  tsconfig.json  tsconfig.node.json  vite.config.tauri.ts  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  permission-allowlist.json  settings.json  settings.local.json
docs/: SSH_ARCHITECTURE.md  main-ts-refactor-design.md  permission-system.md
documentation/: DESIGN.md
electron/: agent-process-manager.ts  background-claude-manager.ts  constants.ts  database.ts  file-id-util.ts  main.ts  preload.ts  pty-manager.ts  ssh-manager.ts  tsconfig.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  event_batcher.rs  hook_installer.rs  lib.rs  main.rs  permission_manager.rs  permission_server.rs  pty_manager.rs  session_state.rs  stream_parser.rs
(+172 files in other folders)
