[package]
name = "toolchain"
version = "2.0.0"
edition = "2021"
description = "ToolChain - High-performance multi-terminal agent development environment"
rust-version = "1.77"

[lib]
name = "toolchain_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "toolchain"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "process", "hostname"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
regex = "1"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
